# python-conway-gol

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  ui.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: docs.md
.github/workflows/: dev-push.yml  python-app.yml
conway_gol/: grid.py  transition.py  ui.py
conway_gol/resources/: icon.xpm
tests/: test_grid.py  test_placeholder.py  test_transition.py
